fixed recipe page spacing

--- a/style.css
+++ b/style.css
@@ -13,9 +13,9 @@
 
 body {
     margin: 0;
+    padding: 0;
     font-size: 16px;
     font-family: "Outfit", sans-serif;
-    padding-top: 20px;
     box-sizing: border-box;
     min-width: 375px;
     background-color: var(--eggshell);
@@ -27,7 +27,7 @@ body {
 }
 
 main {
-    margin: 0 auto;
+    margin: 100px auto;
     min-width: 375px;
     max-width: 735px;
     border-radius: 20px;
@@ -193,7 +193,6 @@ footer a {
 
 @media(max-width: 768px) {
 
-    body,
     .img-wrapper {
         padding: 0
     }
@@ -204,7 +203,8 @@ footer a {
 
     .hero-img,
     main {
-        border-radius: 0
+        border-radius: 0;
+        margin: 0;
     }
 
     h1 {
